# tower-oauth2-resource-server

./: Cargo.toml  LICENSE  README.md  realm.json
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml
examples/: README.md
examples-util/: Cargo.toml  realm.json
examples/axum/: main.rs
examples/axum-example/: Cargo.toml
examples/axum-example/src/: main.rs
examples/custom-error-handler/: Cargo.toml
examples/custom-error-handler/src/: main.rs
examples/custom-jwt-resolver/: Cargo.toml
examples/custom-jwt-resolver/src/: main.rs
examples/salvo-example/: Cargo.toml
examples/salvo-example/src/: main.rs
examples/tonic-example/: Cargo.toml
examples/tonic-example/proto/: helloworld.proto
examples/tonic-example/src/: main.rs
examples/util/: lib.rs
src/: claims.rs  jwks.rs  jwt.rs  oidc.rs  server.rs
tests/: service.rs
tests/common/: mod.rs
tower-oauth2-resource-server/: Cargo.toml
tower-oauth2-resource-server/src/: auth_resolver.rs  builder.rs  claims.rs  error.rs  error_handler.rs  jwks.rs  jwks2.rs  jwt.rs  jwt_extract.rs  jwt_resolver.rs  jwt_unverified.rs  jwt_validate.rs  layer.rs  lib.rs  oidc.rs  server.rs  tenant.rs  validation.rs
tower-oauth2-resource-server/src/authorizer/: authorizer.rs  jwks.rs  jwt_validate.rs  mod.rs  token_authorizer.rs
tower-oauth2-resource-server/tests/: key-pairs.json  misc.rs  oidc.rs  service.rs  static.rs
tower-oauth2-resource-server/tests/common/: context.rs  jwks.rs  jwt.rs  key-pairs.json  mod.rs  oidc.rs  rsa.rs  util.rs
