[workspace]
members = [
    "tower-oauth2-resource-server",
    "examples-util",
    "examples/axum-example",
    "examples/salvo-example",
    "examples/tonic-example"
]
default-members = ["tower-oauth2-resource-server"]
resolver = "2"

[workspace.package]
rust-version = "1.75"

[workspace.dependencies]
log = "0.4.27"
tokio = "1.44.2"
tower = "0.5.2"
env_logger = "0.11.6"
