[workspace]
members = [
    "tower-oauth2-resource-server",
    "examples-util",
    "examples/axum-example",
    "examples/salvo-example",
    "examples/tonic-example",
    "examples/custom-error-handler",
]
resolver = "2"

[workspace.dependencies]
log = "0.4.27"
tokio = "1.47.1"
tower = "0.5.2"
env_logger = "0.11.6"
