[workspace]
members = [
    "tower-oauth2-resource-server",
    "examples-util",
    "examples/axum-example",
    "examples/salvo-example",
    "examples/tonic-example",
    "examples/custom-error-handler",
    "examples/custom-jwt-resolver",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
tokio = "1.47"
tower = "0.5"
env_logger = "0.11"
