[package]
name = "tower-oauth2-resource-server"
description = "Tower middleware that provides JWT authorization against an OpenID Connect (OIDC) Provider"
keywords = ["jwt", "oidc", "oauth2", "authorizer"]
license = "MIT"
homepage = "https://github.com/Dunklas/tower-oauth2-resource-server"
repository = "https://github.com/Dunklas/tower-oauth2-resource-server"
readme = "README.md"
version = "0.3.0"

edition = "2018"
rust-version = "1.45.0"
exclude = ["tests"]

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
futures-util = "0.3.30"
http = "1.3.1"
jsonwebtoken = "9.3.1"
log = { workspace = true }
mockall_double = "0.3.1"
pin-project = "1.1.10"
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tower = { workspace = true }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
bytes = "1.10.1"
lazy_static = "1.4.0"
mockall = "0.13.1"
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wiremock = "0.6.3"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
