[package]
name = "tower-oauth2-resource-server"
description = "Tower middleware that provides JWT authorization against an OpenID Connect (OIDC) Provider"
keywords = ["jwt", "oidc", "oauth2", "authorizer"]
license = "MIT"
homepage = "https://github.com/Dunklas/tower-oauth2-resource-server"
repository = "https://github.com/Dunklas/tower-oauth2-resource-server"
readme = "README.md"
version = "0.8.0"

edition = "2024"
rust-version = "1.85.0"
exclude = ["tests"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
http = "1.3"
jsonwebtoken = { version = "10.1", default-features = false }
log = { workspace = true }
mockall_double = "0.3"
pin-project = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tower = { workspace = true }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
bytes = "1.10.1"
jsonwebtoken = { version = "10.1", default-features = false, features = ["use_pem"] }
lazy_static = "1.5.0"
mockall = "0.13.1"
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wiremock = "0.6.5"

[features]
default = ["default-tls", "jwt-rust-crypto"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
jwt-rust-crypto = ["jsonwebtoken/rust_crypto"]
jwt-aws-lc-rs = ["jsonwebtoken/aws_lc_rs"]
