[package]
name = "axum-example"
edition = "2021"

[dependencies]
tower-oauth2-resource-server = { path = "../../tower-oauth2-resource-server" }
util = { path = "../../examples-util" }

axum = "0.7.7"
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
log = { workspace = true }
tower = { workspace = true, features = ["util"] }
env_logger = { workspace = true }
