[package]
name = "tonic-example"
edition = "2021"

[dependencies]
tower-oauth2-resource-server = { path = "../../tower-oauth2-resource-server" }
examples-util = { path = "../../examples-util" }

tonic = "0.13"
prost = "0.13.5"
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
log = { workspace = true }
tower = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
