[package]
name = "tonic-example"
edition = "2021"

[dependencies]
tower-oauth2-resource-server = { path = "../../tower-oauth2-resource-server" }
examples-util = { path = "../../examples-util" }

tonic = "0.14.2"
prost = "0.14.3"
tonic-prost = "0.14.2"
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
log = { workspace = true }
tower = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
